# Solana-Crash-Game

./: .gitignore  Anchor.toml  LICENSE  README.md  package.json
backend/: package.json
backend/src/: index.ts
backend/src/idl/: solana_crash_game.json
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/components/: Navbar.tsx
frontend/src/pages/: Game.tsx  Home.tsx  Staking.tsx
programs/solana-crash-game/: Cargo.toml
programs/solana-crash-game/src/: crash.rs  errors.rs  lib.rs  staking.rs  vrf.rs
scripts/: deploy.sh  initialize.ts
tests/: solana-crash-game.ts
