[package]
name = "solana-crash-game"
version = "0.1.0"
description = "Solana crash casino game with on-chain provable fairness and LP staking"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_crash_game"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "~1.18.0"
switchboard-v2 = "0.4.0"
